kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/5_failtestExternPackageCall.kmt
package testExternPackage;

require "../../../lib/framework.km"

// operation called in another package
// This test fails because : 
// -> class Integer is not resolved
class Test_opcall {
    operation operation_asg() : Integer is do
        result := 4 * 3
    end
}
